Fix hardness 0 blasting